--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@pbe/react-yandex-maps": "^1.2.5",
     "clsx": "^2.1.1",
     "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-yandex-maps": "^4.6.0"
   },
   "devDependencies": {
     "@types/node": "^20",
