--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-select": "^5.10.1",
     "react-yandex-maps": "^4.6.0"
   },
   "devDependencies": {
