--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "project-for-the-course",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "dev:server": "nodemon backend/index.js",
@@ -21,13 +22,15 @@
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-select": "^5.10.1",
-    "react-yandex-maps": "^4.6.0"
+    "react-yandex-maps": "^4.6.0",
+    "sharp": "^0.34.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "caniuse-lite": "^1.0.30001721",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
     "nodemon": "^3.1.10",
