--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     "paths": {
       "@/*": [
         "./src/*"
-      ]
+      ],
+      "@/page/*": ["./src/page/*"]
     }
   },
   "include": [
@@ -34,6 +35,6 @@
     ".next/types/**/*.ts"
 , "backend/index.js", "backend/controller/users.controller.js", "backend/routes/users.routes.js", "backend/db.js"  ],
   "exclude": [
-    "node_modules"
+    "node_modules"  
   ]
 }
